[package]
name = "push-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
async-stream = "0.3"
base64 = "0.22"

[build-dependencies]
tonic-build = "0.12"
